依赖注入调整
