# demo.Application/user/dto/UserLoginInputDto.go
@@ -1,0 +1,7 @@
+package dto
+
+//UserLoginInputDto UserLoginInputDto
+type UserLoginInputDto struct {
+	Name     string
+	PassWord string
+}
